--- a/TabBarController/Base.lproj/LaunchScreen.storyboard
+++ b/TabBarController/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -13,15 +16,51 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="WDB-Vs-Z4y">
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="WDB-Vs-Z4y" secondAttribute="height" multiplier="1:1" id="D0x-hs-ALa"/>
+                                    <constraint firstAttribute="width" constant="120" id="VDV-lH-c6t"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ZZFramework" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GaT-8J-AuH">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="107" id="d9N-f4-i8T"/>
+                                    <constraint firstAttribute="height" constant="21" id="uxm-VB-kKd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="THE BEST USER EXPERIENCE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3T-J4-6NQ">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="O3d-1w-1l3"/>
+                                    <constraint firstAttribute="width" constant="230" id="eN4-Uh-bUn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="WDB-Vs-Z4y" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="74" id="49K-Yy-f6M"/>
+                            <constraint firstItem="WDB-Vs-Z4y" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="P6P-PP-8kM"/>
+                            <constraint firstItem="GaT-8J-AuH" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="QMw-yK-KBm"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="D3T-J4-6NQ" secondAttribute="bottom" constant="20" id="g6K-8y-jbD"/>
+                            <constraint firstItem="GaT-8J-AuH" firstAttribute="top" secondItem="WDB-Vs-Z4y" secondAttribute="bottom" constant="16" id="ome-DP-7Pf"/>
+                            <constraint firstItem="D3T-J4-6NQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="uFV-hV-K1B"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="-74" y="240"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon" width="1019" height="1018"/>
+    </resources>
 </document>
